--- a/src/layer/requirements.txt
+++ b/src/layer/requirements.txt
@@ -2,3 +2,10 @@ requests
 pyyaml
 boto3
 botocore
+netCDF4=1.6.0
+geocat=2022.7.0
+wrf-python=1.3.4.1
+tqdm=4.54.1
+xarray=2022.6.0
+pandas=1.4.3
+numpy=1.23.0
