--- a/src/lambda/hpc6a.yaml
+++ b/src/lambda/hpc6a.yaml
@@ -64,9 +64,18 @@ SharedStorage:
       Size: '200'
       Encrypted: false
       SnapshotId: snap-0b3dfa4d4485115e6
-  - Name: Efs1
-    StorageType: Efs
-    MountDir: /fsx
-    EfsSettings:
-      ThroughputMode: bursting
+
+  - Name: Fsx
+      StorageType: FsxLustre
+      MountDir: /fsx
+      FsxLustreSettings:
+        DeletionPolicy: Delete
+        StorageCapacity: 1200
+        DeploymentType: PERSISTENT_2
+        PerUnitStorageThroughput: 125
+#  - Name: Efs1
+#    StorageType: Efs
+#    MountDir: /fsx
+#    EfsSettings:
+#      ThroughputMode: bursting
 
